# recording-analyser

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  LICENSE  README.md  audit_coverage.py  auto_transcribe.py  config.example.yaml  config.py  ondemand_transcribe.py  pipeline.py  pyproject.toml  reclassify_and_fix.py  run_transcriber.sh
.github/workflows/: tests.yml
docs/Post-mortems/: 26-02-18 - Missing Analysis Files Feb 17-18.md  26-04-24 - Parakeet OOM System Freeze.md  26-04-25 - Ollama Analysis Timeouts - KV Cache Output Layer Spill.md
docs/adr/: 0000-template.md  0001-gemini-api-for-transcription.md  0002-launchd-daemon-pattern.md  0003-category-based-vault-routing.md  0004-claude-fallback-for-analysis.md  0005-gemini-flash-primary-whisper-fallback.md  0006-classification-in-analysis-stage.md  README.md  ollama-integration.md
tests/: conftest.py
tests/unit/: test_infrastructure.py
